// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Navigation/Nav Link Active 1`] = `
.c3 svg {
  height: 1.5rem;
  width: 1.5rem;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
}

.c1 {
  margin-top: 0.25rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: 500;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1.active {
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(22,30,46,var(--bg-opacity));
}

.c1.active .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1:not(.active) {
  line-height: 1.5rem;
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

.c1:not(.active):hover {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1:not(.active):focus {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1 .c2 {
  margin-right: 1rem;
}

.c1 .c2 svg {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.group:hover .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.group:focus .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

<a
  aria-current="page"
  className="c0 c1 group active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  <div
    className="c2 c3"
  >
    <svg
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </div>
  Dashboard
</a>
`;

exports[`Storyshots Molecules/Navigation/Nav Link Inactive 1`] = `
.c3 svg {
  height: 1.5rem;
  width: 1.5rem;
  --text-opacity: 1;
  color: rgba(159,166,178,var(--text-opacity));
}

.c1 {
  margin-top: 0.25rem;
  font-size: 1rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  font-weight: 500;
  border-radius: 0.375rem;
  cursor: pointer;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.c1:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1.active {
  line-height: 1.25rem;
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(22,30,46,var(--bg-opacity));
}

.c1.active .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1:not(.active) {
  line-height: 1.5rem;
  --text-opacity: 1;
  color: rgba(210,214,220,var(--text-opacity));
}

.c1:not(.active):hover {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
  --bg-opacity: 1;
  background-color: rgba(55,65,81,var(--bg-opacity));
}

.c1:not(.active):focus {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.c1 .c2 {
  margin-right: 1rem;
}

.c1 .c2 svg {
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,-webkit-transform;
  -webkit-transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  transition-property: background-color,border-color,color,fill,stroke,opacity,box-shadow,transform;
  -webkit-transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  transition-timing-function: cubic-bezier(0.4,0,0.2,1);
  -webkit-transition-duration: 150ms;
  transition-duration: 150ms;
}

.group:hover .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

.group:focus .c0 .c2 svg {
  --text-opacity: 1;
  color: rgba(255,255,255,var(--text-opacity));
}

<a
  aria-current={null}
  className="c0 c1 group"
  href="/asd"
  onClick={[Function]}
>
  <div
    className="c2 c3"
  >
    <svg
      fill="none"
      stroke="currentColor"
      viewBox="0 0 24 24"
    >
      <path
        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth={2}
      />
    </svg>
  </div>
  Dashboard
</a>
`;
